--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Penalty Game</title>
+<title>Penalty 2D First Person</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-  background: linear-gradient(#87ceeb 0%, #cfefff 45%, #7ec850 45%);
+  background: linear-gradient(#87ceeb 0%, #cfefff 55%, #4caf50 55%);
   color: #fff;
 }
 
-/* экраны */
 .screen {
   min-height: 100vh;
   display: none;
@@ -23,176 +22,128 @@ body {
 }
 .screen.active { display: flex; }
 
-/* карточка */
 .card {
   width: 100%;
   max-width: 420px;
-  background: rgba(15,122,46,0.95);
+  background: rgba(10,90,35,0.95);
   border-radius: 20px;
-  padding: 18px;
+  padding: 16px;
   box-shadow: 0 30px 60px rgba(0,0,0,0.45);
 }
 
-/* меню */
-.menu-title {
+.title {
   text-align: center;
-  font-size: 26px;
+  font-size: 22px;
   font-weight: 900;
-  margin-bottom: 20px;
 }
-.menu-btn {
-  width: 100%;
-  padding: 16px;
-  margin-top: 12px;
-  font-size: 18px;
-  font-weight: 800;
-  border-radius: 14px;
-  border: none;
-  cursor: pointer;
-  color: #fff;
+
+.stats {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 8px;
 }
-.menu-btn.play { background: linear-gradient(135deg,#00c6ff,#0088cc); }
-.menu-btn.career { background: linear-gradient(135deg,#1ed760,#1db954); }
-.menu-btn.progress { background: linear-gradient(135deg,#ffb347,#ff7f50); }
-.menu-btn.records { background: linear-gradient(135deg,#ff512f,#dd2476); }
 
-/* игра */
-.title { text-align:center;font-weight:800;font-size:22px; }
-.stats { text-align:center;font-size:14px;margin:6px 0 10px; }
-
+/* СТАДИОН (ПЕРСПЕКТИВА) */
 .stadium {
   position: relative;
   width: 100%;
-  height: 230px;
-  background: linear-gradient(#c0c0c0 0%, #d9d9d9 35%, #1e8f3a 35%);
-  border-radius: 14px;
+  height: 260px;
+  background: linear-gradient(#9fd3ff 0%, #bfe6ff 45%, #3fa34d 45%);
+  border-radius: 16px;
   overflow: hidden;
   cursor: crosshair;
 }
 
+/* ВОРОТА ВДАЛИ */
 .goal {
-  position:absolute;
-  top:42px;
-  left:50%;
-  transform:translateX(-50%);
-  width:200px;
-  height:78px;
-  border:4px solid #fff;
-  border-bottom:none;
+  position: absolute;
+  top: 35px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 160px;
+  height: 60px;
+  border: 4px solid #fff;
+  border-bottom: none;
 }
 
+/* ВРАТАРЬ В ГЛУБИНЕ */
 .keeper {
-  position:absolute;
-  top:70px;
-  left:50%;
-  width:24px;
-  height:36px;
-  background:#ffd700;
-  border-radius:6px;
-  transform:translateX(-50%);
-  transition:transform .35s ease;
+  position: absolute;
+  top: 60px;
+  left: 50%;
+  width: 20px;
+  height: 30px;
+  background: #ffcc00;
+  border-radius: 5px;
+  transform: translateX(-50%);
+  transition: transform 0.4s ease;
 }
 .keeper::before {
-  content:"";
-  position:absolute;
-  top:-14px;
-  left:50%;
-  transform:translateX(-50%);
-  width:16px;
-  height:16px;
-  background:#ffd700;
-  border-radius:50%;
+  content: "";
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 14px;
+  height: 14px;
+  background: #ffcc00;
+  border-radius: 50%;
 }
 
+/* МЯЧ У ИГРОКА */
 .ball {
-  position:absolute;
-  bottom:20px;
-  left:50%;
-  width:22px;
-  height:22px;
-  background:#fff;
-  border:3px solid #000;
-  border-radius:50%;
-  transform:translateX(-50%);
-  transition:transform .5s ease;
+  position: absolute;
+  bottom: 22px;
+  left: 50%;
+  width: 26px;
+  height: 26px;
+  background: #fff;
+  border: 3px solid #000;
+  border-radius: 50%;
+  transform: translateX(-50%);
+  transition: transform 0.6s ease, width 0.6s ease, height 0.6s ease;
 }
 
+/* ПРИЦЕЛ */
 .aim {
-  position:absolute;
-  width:14px;
-  height:14px;
-  border:2px solid red;
-  border-radius:50%;
-  pointer-events:none;
-  display:none;
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  border: 2px solid red;
+  border-radius: 50%;
+  pointer-events: none;
+  display: none;
 }
 
-/* шкала силы */
+/* СИЛА */
 .power-bar {
-  height:12px;
-  background:#333;
-  border-radius:6px;
-  overflow:hidden;
-  margin-top:10px;
+  height: 12px;
+  background: #333;
+  border-radius: 6px;
+  overflow: hidden;
+  margin-top: 10px;
 }
 .power-fill {
-  height:100%;
-  width:0%;
-  background:linear-gradient(90deg,red,orange,lime,orange,red);
+  height: 100%;
+  width: 0%;
+  background: linear-gradient(90deg, red, orange, lime, orange, red);
 }
 
 .result {
-  text-align:center;
-  font-weight:700;
-  min-height:22px;
-  margin-top:6px;
-}
-
-/* кнопки */
-.btn {
-  width:100%;
-  margin-top:8px;
-  padding:14px;
-  font-size:16px;
-  font-weight:700;
-  border-radius:12px;
-  border:none;
-  cursor:pointer;
-  display:none;
-  color:#fff;
-}
-.btn.next { background:linear-gradient(135deg,#00c6ff,#0088cc); }
-.btn.restart { background:linear-gradient(135deg,#1db954,#1ed760); }
-.btn.back { background:linear-gradient(135deg,#555,#777); }
-
-/* списки */
-.item {
-  display:flex;
-  justify-content:space-between;
-  margin:8px 0;
-  font-size:15px;
+  text-align: center;
+  font-weight: 700;
+  min-height: 22px;
+  margin-top: 6px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- МЕНЮ -->
-<div class="screen active" id="menu">
+<div class="screen active">
   <div class="card">
-    <div class="menu-title">PENALTY GAME</div>
-    <button class="menu-btn play" onclick="startGame(false)">🎮 Новая игра</button>
-    <button class="menu-btn career" onclick="startGame(true)">⭐ Карьера</button>
-    <button class="menu-btn progress" onclick="openProgress()">📈 Прогресс</button>
-    <button class="menu-btn records" onclick="openRecords()">🏆 Рекорды</button>
-  </div>
-</div>
-
-<!-- ИГРА -->
-<div class="screen" id="game">
-  <div class="card">
-    <div class="title" id="modeTitle"></div>
-    <div class="stats" id="stats"></div>
+    <div class="title">Пенальти</div>
+    <div class="stats" id="stats">Удар: 1 / 5</div>
 
     <div class="stadium" id="stadium">
       <div class="goal"></div>
@@ -202,197 +153,87 @@ body {
     </div>
 
     <div class="power-bar"><div class="power-fill" id="powerFill"></div></div>
-    <div class="result" id="result">Наведи, зажми и бей</div>
-
-    <button class="btn next" id="nextBtn">➡️ Следующий удар</button>
-    <button class="btn restart" id="restartBtn">🔁 Новая серия</button>
-    <button class="btn back" onclick="backToMenu()">⬅️ В меню</button>
-  </div>
-</div>
-
-<!-- ПРОГРЕСС -->
-<div class="screen" id="progress">
-  <div class="card">
-    <div class="title">Прогресс</div>
-    <div class="item"><span>Текущий рейтинг</span><span id="pRating"></span></div>
-    <div class="item"><span>Лучший рейтинг</span><span id="pBestRating"></span></div>
-    <div class="item"><span>Всего голов</span><span id="pGoals"></span></div>
-    <div class="item"><span>Серий сыграно</span><span id="pSeries"></span></div>
-    <button class="btn back" style="display:block" onclick="backToMenu()">⬅️ В меню</button>
-  </div>
-</div>
-
-<!-- РЕКОРДЫ -->
-<div class="screen" id="records">
-  <div class="card">
-    <div class="title">Рекорды</div>
-    <div class="item"><span>Лучший результат</span><span id="rBestSeries"></span></div>
-    <div class="item"><span>Лучший стрик</span><span id="rBestStreak"></span></div>
-    <div class="item"><span>Всего голов</span><span id="rTotalGoals"></span></div>
-    <button class="btn back" style="display:block" onclick="backToMenu()">⬅️ В меню</button>
+    <div class="result" id="result">Наведи и бей</div>
   </div>
 </div>
 
 <script>
-/* ===== ПРОГРЕСС ===== */
-function getProgress(){
-  return JSON.parse(localStorage.getItem('progress')) || {
-    rating:60,
-    bestRating:60,
-    totalGoals:0,
-    seriesPlayed:0,
-    bestSeries:0,
-    bestStreak:0
-  };
-}
-function saveProgress(p){
-  localStorage.setItem('progress',JSON.stringify(p));
-}
+let power = 0;
+let charging = false;
+let canShoot = true;
+let interval;
 
-/* ===== ИГРА ===== */
-let shots, goals, rating, career;
-let power=0, charging=false, interval, canShoot=true;
-let currentStreak=0;
-const maxShots=5;
+const stadium = document.getElementById('stadium');
+const ball = document.getElementById('ball');
+const keeper = document.getElementById('keeper');
+const aim = document.getElementById('aim');
+const powerFill = document.getElementById('powerFill');
+const result = document.getElementById('result');
 
-const screens=document.querySelectorAll('.screen');
-const stats=document.getElementById('stats');
-const modeTitle=document.getElementById('modeTitle');
-const stadium=document.getElementById('stadium');
-const ball=document.getElementById('ball');
-const keeper=document.getElementById('keeper');
-const aim=document.getElementById('aim');
-const powerFill=document.getElementById('powerFill');
-const result=document.getElementById('result');
-const nextBtn=document.getElementById('nextBtn');
-const restartBtn=document.getElementById('restartBtn');
-
-function showScreen(id){
-  screens.forEach(s=>s.classList.remove('active'));
-  document.getElementById(id).classList.add('active');
-}
-
-function startGame(isCareer){
-  career=isCareer;
-  shots=0; goals=0; currentStreak=0;
-  const p=getProgress();
-  rating=isCareer?p.rating:60;
-  modeTitle.innerText=isCareer?'Карьера':'Новая игра';
-  updateStats();
-  showScreen('game');
-}
-
-function updateStats(){
-  stats.innerText=`Удары: ${shots}/5 · Голы: ${goals} · Рейтинг: ${rating}`;
-}
-
-stadium.addEventListener('mousemove',e=>{
-  if(!canShoot) return;
-  const r=stadium.getBoundingClientRect();
-  aim.style.left=e.clientX-r.left-7+'px';
-  aim.style.top=e.clientY-r.top-7+'px';
-  aim.style.display='block';
+/* прицел */
+stadium.addEventListener('mousemove', e => {
+  if (!canShoot) return;
+  const r = stadium.getBoundingClientRect();
+  aim.style.left = e.clientX - r.left - 6 + 'px';
+  aim.style.top = e.clientY - r.top - 6 + 'px';
+  aim.style.display = 'block';
 });
 
-stadium.addEventListener('mousedown',()=>{
-  if(!canShoot) return;
-  charging=true; power=0; powerFill.style.width='0%';
-  interval=setInterval(()=>{
-    power=Math.min(power+2,100);
-    powerFill.style.width=power+'%';
-  },30);
+/* заряд */
+stadium.addEventListener('mousedown', () => {
+  if (!canShoot) return;
+  charging = true;
+  power = 0;
+  powerFill.style.width = '0%';
+  interval = setInterval(() => {
+    power = Math.min(power + 2, 100);
+    powerFill.style.width = power + '%';
+  }, 30);
 });
 
-stadium.addEventListener('mouseup',e=>{
-  if(!charging||!canShoot) return;
-  clearInterval(interval); charging=false; canShoot=false;
-  shots++;
+/* удар */
+stadium.addEventListener('mouseup', e => {
+  if (!charging || !canShoot) return;
+  clearInterval(interval);
+  charging = false;
+  canShoot = false;
 
-  const r=stadium.getBoundingClientRect();
-  const x=e.clientX-r.left;
-  const y=e.clientY-r.top;
+  const r = stadium.getBoundingClientRect();
+  const x = e.clientX - r.left;
+  const y = e.clientY - r.top;
 
-  ball.style.transform=`translateX(calc(-50% + ${x-r.width/2}px)) translateY(${y-(r.height-20)}px)`;
+  const depthScale = 0.4;
+  const targetX = (x - r.width / 2) * 0.8;
+  const targetY = (y - 40);
 
-  const save=Math.random()<0.4;
-  if(save){
-    keeper.style.transform=`translateX(calc(-50% + ${x-r.width/2}px))`;
-    result.innerText='❌ СЕЙВ';
-    currentStreak=0;
-  }else{
-    goals++;
-    currentStreak++;
-    result.innerText='⚽ ГОЛ';
-    if(career && rating<99) rating++;
+  ball.style.transform =
+    `translateX(calc(-50% + ${targetX}px))
+     translateY(${targetY}px)`;
+  ball.style.width = '10px';
+  ball.style.height = '10px';
+
+  const save = Math.random() < 0.4;
+  if (save) {
+    keeper.style.transform =
+      `translateX(calc(-50% + ${targetX * 0.6}px))`;
   }
 
-  updateStats();
-  setTimeout(showAfterShot,600);
+  setTimeout(() => {
+    result.innerText = save ? '❌ СЕЙВ' : '⚽ ГОООЛ';
+  }, 500);
+
+  setTimeout(resetShot, 900);
 });
 
-function showAfterShot(){
-  aim.style.display='none';
-  powerFill.style.width='0%';
-  if(shots<maxShots){
-    nextBtn.style.display='block';
-  }else{
-    finishSeries();
-  }
-}
-
-nextBtn.onclick=()=>{
-  resetShot();
-  nextBtn.style.display='none';
-};
-
-function finishSeries(){
-  const p=getProgress();
-  if(career){
-    p.rating=rating;
-    p.bestRating=Math.max(p.bestRating,rating);
-    p.totalGoals+=goals;
-    p.seriesPlayed++;
-    p.bestSeries=Math.max(p.bestSeries,goals);
-    p.bestStreak=Math.max(p.bestStreak,currentStreak);
-    saveProgress(p);
-  }
-  result.innerText=`🏁 Серия окончена: ${goals} из 5`;
-  restartBtn.style.display='block';
-}
-
-restartBtn.onclick=()=>{
-  shots=0; goals=0; currentStreak=0;
-  restartBtn.style.display='none';
-  updateStats();
-  resetShot();
-};
-
-function resetShot(){
-  ball.style.transform='translateX(-50%)';
-  keeper.style.transform='translateX(-50%)';
-  result.innerText='Наведи, зажми и бей';
-  canShoot=true;
-}
-
-function openProgress(){
-  const p=getProgress();
-  document.getElementById('pRating').innerText=p.rating;
-  document.getElementById('pBestRating').innerText=p.bestRating;
-  document.getElementById('pGoals').innerText=p.totalGoals;
-  document.getElementById('pSeries').innerText=p.seriesPlayed;
-  showScreen('progress');
-}
-
-function openRecords(){
-  const p=getProgress();
-  document.getElementById('rBestSeries').innerText=p.bestSeries+' / 5';
-  document.getElementById('rBestStreak').innerText=p.bestStreak;
-  document.getElementById('rTotalGoals').innerText=p.totalGoals;
-  showScreen('records');
-}
-
-function backToMenu(){
-  showScreen('menu');
+function resetShot() {
+  ball.style.transform = 'translateX(-50%)';
+  ball.style.width = '26px';
+  ball.style.height = '26px';
+  keeper.style.transform = 'translateX(-50%)';
+  aim.style.display = 'none';
+  powerFill.style.width = '0%';
+  result.innerText = 'Наведи и бей';
+  canShoot = true;
 }
 </script>
 
