--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@ body {
 .card {
   width: 100%;
   max-width: 420px;
-  background: rgba(15,122,46,0.95);
-  border-radius: 20px;
+  background: rgba(10,90,35,0.96);
+  border-radius: 22px;
   padding: 18px;
-  box-shadow: 0 30px 60px rgba(0,0,0,0.45);
+  box-shadow: 0 35px 70px rgba(0,0,0,0.5);
 }
 
-/* меню */
+/* ===== МЕНЮ ===== */
 .menu-title {
   text-align: center;
   font-size: 26px;
@@ -54,20 +54,32 @@ body {
 .menu-btn.progress { background: linear-gradient(135deg,#ffb347,#ff7f50); }
 .menu-btn.records { background: linear-gradient(135deg,#ff512f,#dd2476); }
 
-/* игра */
+/* ===== ИГРА ===== */
 .title { text-align:center;font-weight:800;font-size:22px; }
 .stats { text-align:center;font-size:14px;margin:6px 0 10px; }
 
+/* СТАДИОН */
 .stadium {
   position: relative;
   width: 100%;
   height: 230px;
-  background: linear-gradient(#c0c0c0 0%, #d9d9d9 35%, #1e8f3a 35%);
-  border-radius: 14px;
+  border-radius: 16px;
   overflow: hidden;
   cursor: crosshair;
+  background:
+    repeating-linear-gradient(
+      90deg,
+      #2e7d32 0px,
+      #2e7d32 20px,
+      #388e3c 20px,
+      #388e3c 40px
+    );
+  box-shadow:
+    inset 0 20px 40px rgba(0,0,0,0.35),
+    inset 0 -20px 40px rgba(255,255,255,0.05);
 }
 
+/* ВОРОТА */
 .goal {
   position:absolute;
   top:42px;
@@ -77,8 +89,20 @@ body {
   height:78px;
   border:4px solid #fff;
   border-bottom:none;
+  background:
+    linear-gradient(
+      135deg,
+      rgba(255,255,255,0.18) 25%,
+      transparent 25%,
+      transparent 50%,
+      rgba(255,255,255,0.18) 50%,
+      rgba(255,255,255,0.18) 75%,
+      transparent 75%
+    );
+  background-size: 12px 12px;
 }
 
+/* ВРАТАРЬ */
 .keeper {
   position:absolute;
   top:70px;
@@ -102,6 +126,7 @@ body {
   border-radius:50%;
 }
 
+/* МЯЧ */
 .ball {
   position:absolute;
   bottom:20px;
@@ -113,8 +138,10 @@ body {
   border-radius:50%;
   transform:translateX(-50%);
   transition:transform .5s ease;
+  box-shadow: 0 8px 10px rgba(0,0,0,0.45);
 }
 
+/* ПРИЦЕЛ */
 .aim {
   position:absolute;
   width:14px;
@@ -125,7 +152,7 @@ body {
   display:none;
 }
 
-/* сила */
+/* СИЛА */
 .power-bar {
   height:12px;
   background:#333;
